--- a/Part1/ChristmasCarol.html
+++ b/Part1/ChristmasCarol.html
@@ -25,8 +25,6 @@
 
 DIV.book { margin-left: 5%; margin-right: 5%; text-align: justify; }
 DIV.contents { font-weight: bold; }
-.title { color: #B80000; }
-.title2 { color: #0033AA; }
 TABLE.illus { font-variant: small-caps; font-weight: bold; }
 P.illus { text-indent: -2em; margin-left: 2em; }
 P.noindent { text-indent: 0em; margin-top: 0; margin-bottom: 0; }
@@ -81,9 +79,15 @@ first edition.
     <div class="fig" style="width:80%">
       <img src="./ChristmasCarol_files/bookcover.jpg" alt="Cover of 1843 First Edition" width="100%"><br>
     </div>
+    <h4>
+      <i class="imageCap">Cover of 1843 First Edition</i>
+    </h4>
     <div class="fig" style="width:80%">
       <img src="./ChristmasCarol_files/titlepage.jpg" alt="Title Page of 1843 First Edition" width="100%"><br>
     </div>
+    <h4>
+      <i class="imageCap">Title Page of 1843 First Edition</i>
+    </h4>
     <div class="book">
       <br>
       <hr>
@@ -896,7 +900,7 @@ first edition.
       <img src="./ChristmasCarol_files/01.jpg" alt="Marley&#39;s Ghost" width="100%"><br>
     </div>
     <h4>
-      <i>Marley’s Ghost</i>
+      <i class="imageCap">Marley’s Ghost</i>
     </h4>
     <p>
       <br>
@@ -1268,6 +1272,9 @@ first edition.
     <div class="fig" style="width:80%">
       <img src="./ChristmasCarol_files/02.jpg" alt="Ghosts of Departed Usurers" width="100%"><br>
     </div>
+    <h4>
+      <i class="imageCap">Ghosts of Departed Usurers</i>
+    </h4>
     <p>
       <br><br>
     </p>
@@ -1858,7 +1865,7 @@ first edition.
       <img src="./ChristmasCarol_files/03.jpg" alt="Mr. Fezziwig&#39;s Ball" width="100%"><br>
     </div>
     <h4>
-      <i>Mr. Fezziwig’s Ball</i>
+      <i class="imageCap">Mr. Fezziwig’s Ball</i>
     </h4>
     <p>
       <br>
@@ -2191,6 +2198,9 @@ first edition.
     <div class="fig" style="width:80%">
       <img src="./ChristmasCarol_files/04.jpg" alt="Scrooge Extinguishes the First of the Three Spirits" width="100%"><br>
     </div>
+    <h4>
+      <i class="imageCap">Scrooge Extinguishes the First of the Three Spirits</i>
+    </h4>
     <p>
       <br><br>
     </p>
@@ -2306,7 +2316,7 @@ first edition.
       <img src="./ChristmasCarol_files/05.jpg" alt="Scrooge&#39;s Third Visitor" width="100%"><br>
     </div>
     <h4>
-      <i>Scrooge’s Third Visitor</i>
+      <i class="imageCap">Scrooge’s Third Visitor</i>
     </h4>
     <p>
       <br>
@@ -3238,6 +3248,9 @@ first edition.
     <div class="fig" style="width:80%">
       <img src="./ChristmasCarol_files/06.jpg" alt="Ignorance and Want" width="100%"><br>
     </div>
+    <h4>
+      <i class="imageCap">Ignorance and Want</i>
+    </h4>
     <p>
       <br><br>
     </p>
@@ -4096,7 +4109,7 @@ first edition.
       <img src="./ChristmasCarol_files/07.jpg" alt="The Last of the Spirits" width="100%"><br>
     </div>
     <h4>
-      <i>The Last of the Spirits</i>
+      <i class="imageCap">The Last of the Spirits</i>
     </h4>
     <p>
       <br>
@@ -4509,6 +4522,9 @@ first edition.
     <div class="fig" style="width:80%">
       <img src="./ChristmasCarol_files/08.jpg" alt="Scrooge and Bob Cratchit" width="100%"><br>
     </div>
+    <h4>
+      <i class="imageCap">Scrooge and Bob Cratchit</i>
+    </h4>
     <p>
       <br><br>
     </p>
